PersonalOrg/force-app/main/default/objects/Lead/validationRules/Require_LastName_Or_Company.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_LastName_Or_Company</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(LastName) &amp;&amp; ISBLANK(Company)</errorConditionFormula>
    <errorMessage>Either Last Name or Company must be provided.</errorMessage>
</ValidationRule>